--- a/client/src/style.css
+++ b/client/src/style.css
@@ -62,10 +62,9 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100%;
+  height: 100%; /* Take full height */
+  padding: 0; /* Remove padding */
 }
 
 @media (prefers-color-scheme: light) {
